--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>justinbrehm.com by jbrehm</title>
+    <title>Justin Brehm by jbrehm</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>justinbrehm.com</h1>
-        <p></p>
+        <h1>Justin Brehm</h1>
+        <p>Full-stack systems engineer for ReverbNation.</p>
 
 
         <p class="view"><a href="https://github.com/jbrehm">View My GitHub Profile</a></p>
