--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Justin Brehm</h1>
-        <p>Full-stack systems engineer for ReverbNation.</p>
+        <p>Director, Technical Operations for ReverbNation.</p>
 
 
         <p class="view"><a href="https://github.com/jbrehm">View My GitHub Profile</a></p>
